Refactor a bit and code clean up

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -10,7 +10,7 @@
     <h1>Hello! Enter a sentence and a word to match and we will count the number of matches in the sentence. Wow!</h1>
     <form action="/results" method="post">
       <input type="text-field" name="sentence" placeholder="Enter a sentence"></input>
-      <input type="text-field" name="userWord" placeholder="Enter a word to count"></input>
+      <input type="text-field" name="userWord" placeholder="Enter a word to match"></input>
       <button type="submit" name="submit">Submit</button>
     </form>
   </div>
