Style the page and add test and logic for handling blank inputs

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -9,9 +9,21 @@
   <div class="container">
     <h1>Hello! Enter a sentence and a word to match and we will count the number of matches in the sentence. Wow!</h1>
     <form action="/results" method="post">
-      <input type="text-field" name="sentence" placeholder="Enter a sentence"></input>
-      <input type="text-field" name="userWord" placeholder="Enter a word to match"></input>
-      <button type="submit" name="submit">Submit</button>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="center">
+          <input type="text-field" name="sentence" placeholder="Enter a sentence" size="40"></input>
+        </div>
+        <div class="center">
+          <input type="text-field" name="userWord" placeholder="Enter a word to match" size="25"></input>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="center">
+           <button type="submit" class="btn btn-danger btn-circle btn-xl" name="submit">Submit</button>
+        </div>
+      </div>
+    </div>
     </form>
   </div>
   </body>
